- mx_stream modified to provide additional diagnostics when used in a system with 2 DAQ data
  concentrators.
- Request (691): DAQ builds now detect EPICS, framecpp installs 
- Request (854): DAQ builds put labels on thread, can set real-time priority, CPU affinity
- Bug Fix (494): Remove test for frame directory count when using GPS-time folders
==================================================================================================
Changes for 2.9.4 release
==================================================================================================
- Changes to account for June 30, 2015 leap second.
   - Modified timing.c and spectracom.c files to add leap second. This code should be redone in
        next major release as it is not well done here.
   - Dataviewer fixed by adding to leap second list in src/dv/Lib/UTC_GPS/leapsecs.txt
   - gds/tconv.c modified.
==================================================================================================
Changes for 2.9.3 release
==================================================================================================
- Bug Fix (850) : SDF changes.
- As requested for Guardian, changed skeleton.st to read filter module ramp time values before
  offsets and gains.
==================================================================================================
Changes for 2.9.2 release
==================================================================================================
- Bug Fix: IPC errors when using RFM DMA mode.  Modified controller.c to verify that RFM DMA
  was complete before triggering user applications. 
- Added a 1 cycle delay for RFM senders.  This is specifically for use in RFM sender models
  that run too long (>45usec) for transmission to reach end/corner in time. This delay is set on
  a per model basis by adding the line rfm_delay to the Parameter block.
==================================================================================================