@@ -20,6 +20,7 @@ Changes for 2.10
 - Request (691): DAQ builds now detect EPICS, framecpp installs 
 - Request (854): DAQ builds put labels on thread, can set real-time priority, CPU affinity
 - Bug Fix (494): Remove test for frame directory count when using GPS-time folders
+- Bug Fix (888): Make mx pre-thread inputs non-volatile
 ==================================================================================================
 Changes for 2.9.4 release
 ==================================================================================================
